--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-sass-webpack-boilerplate",
   "version": "0.1.0",
-  "description": "",
+  "description": "A webpack 5 boilerplate with sass support",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
